--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
     </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/images/Ads.png" alt="">
       </div>
@@ -281,7 +281,7 @@
             <div>
               <span class="content-tag">software</span>
               <h3 class="text-xl">
-                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...
+                Aplicativo de monitoramento ambiental ganha destaque, incentivando prát...
               </h3>
             </div>
           </article>
@@ -295,7 +295,7 @@
             <div>
               <span class="content-tag">realidade virtual</span>
               <h3 class="text-xl">
-                Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial compl...
+                Óculos de realidade virtual com feedback tátil proporcionam uma experiên...
               </h3>
             </div>
           </article>
@@ -309,7 +309,7 @@
             <div>
               <span class="content-tag">criptomoedas</span>
               <h3 class="text-xl">
-                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...
+                Surge uma nova moeda digital baseada em tecnologias sustentáveis, busca...
               </h3>
             </div>
           </article>
@@ -323,7 +323,7 @@
             <div>
               <span class="content-tag">drones</span>
               <h3 class="text-xl">
-                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...
+                Empresas de e-commerce implementam frota de drones para entregas rápidas, trans...
               </h3>
             </div>
           </article>
@@ -337,7 +337,7 @@
             <div>
               <span class="content-tag">impressão 3d</span>
               <h3 class="text-xl">
-                Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...
+                Tecnologia inovadora permite a impressão 3D de órgãos humanos, revoluci...
               </h3>
             </div>
           </article>
@@ -345,7 +345,7 @@
 
       </section>
 
-    </div>
+    </aside>
 
   </main>
 </body>
